<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tipDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ScrollView
            android:id="@+id/tipScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <LinearLayout
                android:id="@+id/tip_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tipImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/sample_tip_pic"
                    android:contentDescription="@string/first_image_of_tip"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tipName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tip_name"
                    android:textColor="@color/md_theme_scrim"
                    android:textSize="24sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tipImage"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tipStatusIcon"
                        android:layout_width="7dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_dot"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/this_is_icon_for_illustration"
                        app:layout_constraintTop_toBottomOf="@+id/tipImage"/>

                    <TextView
                        android:id="@+id/tipStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/status"
                        android:textColor="@color/md_theme_pending"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        app:layout_constraintTop_toBottomOf="@+id/tipImage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:textSize="12sp"
                    android:gravity="bottom">

                    <ImageView
                        android:id="@+id/tip_list_item_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:scrollbarSize="4dp"
                        app:srcCompat="@drawable/shape_avatar"
                        android:contentDescription="@string/first_image_of_tip" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/user_name"
                            android:textColor="@color/md_theme_secondary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/storeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/store_name"
                            android:textColor="@color/md_theme_secondary"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|end|right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/dateOfTip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_tip"
                            android:textColor="@color/md_theme_gray_addition"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                        <ImageView
                            android:layout_width="4dp"
                            android:layout_height="4dp"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/this_is_icon_for_illustration"
                            android:src="@drawable/icon_dot"
                            app:layout_constraintTop_toBottomOf="@+id/tipImage"
                            app:tint="@color/md_theme_gray_addition" />

                        <TextView
                            android:id="@+id/upvotes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:text="@string/upvotes_placeholder"
                            android:textColor="@color/md_theme_gray_addition"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    android:textSize="12sp"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/tipDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/md_theme_onSecondaryContainer"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>