<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/report_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_onPrimary"
    android:orientation="horizontal">
    <RelativeLayout
        android:id="@+id/report_list_item_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp">

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/square_overlay"
            android:id="@+id/report_list_item_image"
            android:scaleType="centerCrop"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="16dp"
            app:srcCompat="@drawable/shape_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/report_list_item_image"
            android:layout_toStartOf="@id/list_item_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/report_list_item_short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/report_list_item_image"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingTop="17dp"
                android:text="@string/lorem_ipsum"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/md_theme_onSurface"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/report_list_item_short_description"
                android:layout_toEndOf="@id/report_list_item_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/by_user"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/md_theme_onSurface"
                    android:paddingBottom="16dp" />

                <TextView
                    android:id="@+id/report_list_item_reporter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text=" "
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/md_theme_onSurface"
                    android:paddingBottom="16dp"
                    android:textStyle="bold"/>


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="58dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow_right_24"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/this_is_icon_for_illustration" />

    </RelativeLayout>

</LinearLayout>