<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <RelativeLayout
        android:id="@+id/product_list_item_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/md_theme_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Peperomia Flex"
                    android:gravity="center_vertical"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_theme_primary" />

                <TextView
                    android:id="@+id/product_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.5"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:textColor="@color/md_theme_primary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="48dp" />

                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_star_24"
                    app:tint="@color/md_theme_primary"
                    android:contentDescription="@string/this_is_icon_for_illustration" />


                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/md_theme_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <FrameLayout
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/product_list_item_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbarSize="4dp"
                        android:layout_margin="0.5dp"
                        app:srcCompat="@drawable/pika"
                        app:cardElevation="4dp" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/transaction_list_item_short_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/lorem_ipsum"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/md_theme_onSurface"
                        android:layout_marginEnd="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/product_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/md_theme_outline"
                            android:textSize="16sp"
                            android:layout_marginEnd="7dp"
                            android:text="@string/strikethrough_text_html" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginEnd="20dp">

                            <TextView
                                android:id="@+id/product_price_after_sale_off"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/md_theme_error"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="đ70.000" />

                            <TextView
                                android:id="@+id/product_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/md_theme_scrim"
                                android:textSize="16sp"
                                android:text="x10"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/md_theme_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/tipName"
                app:layout_constraintTop_toBottomOf="@+id/account_name"
                android:gravity="center">

                <View
                    android:layout_width="20dp"
                    android:layout_height="48dp" />

                <ImageView
                    android:id="@+id/total_money_icon"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_numbers_24"
                    android:contentDescription="@string/this_is_icon_for_illustration" />

                <TextView
                    android:id="@+id/payment_option"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:text="SOLD QUANTITY:"
                    android:gravity="center_vertical"
                    android:textSize="14dp"
                    android:textColor="@color/md_theme_primary" />

                <TextView
                    android:id="@+id/total_quantity_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/md_theme_primary"/>

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp" />

</LinearLayout>
